# Brio-Kernel

./: .gitignore  README.md
.github/workflows/: ci.yml
brio-core/: Cargo.toml  deny.toml
brio-core/components/supervisor/: Cargo.toml
brio-core/components/supervisor/src/: domain.rs  lib.rs  mesh_client.rs  orchestrator.rs  repository.rs  wit_bindings.rs
brio-core/kernel/: Cargo.toml  build.rs  build_output.txt  build_output_final.txt  build_output_integ.txt  test_output.txt  test_output_integ.txt  test_output_integ_2.txt  test_output_unit.txt
brio-core/kernel/src/: host.rs  lib.rs  main.rs
brio-core/kernel/src/engine/: linker.rs  mod.rs  runtime.rs
brio-core/kernel/src/inference/: anthropic.rs  mod.rs  openai.rs  registry.rs
brio-core/kernel/src/infrastructure/: audit.rs  server.rs
brio-core/kernel/src/mesh/: mod.rs  remote.rs  service.rs  types.rs
brio-core/kernel/src/store/: impl.rs  integration_tests.rs  mod.rs  policy.rs
brio-core/kernel/src/ws/: broadcaster.rs  connection.rs  handler.rs  mod.rs  types.rs
brio-core/kernel/tests/: distributed_e2e.rs  engine_tests.rs  host_tests.rs  inference_tests.rs  integration_tests.rs  manifesto_e2e.rs
brio-core/wit/: brio.wit  host.wit  mesh.wit
docs/: ARCHITECTURE.md
