[workspace]
resolver = "2"
members = [
    "kernel",
    "components/supervisor",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
wasmtime = { version = "18.0" } # Check for latest version compatible with WASI P2
wasmtime-wasi = { version = "18.0" }
wasmtime-component-macro = { version = "18.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
fs_extra = "1.3"
